.box {     width: 50%;     display: flex;     flex-wrap: wrap;     background-attachment: fixed;     justify-content: space-evenly;     background-size: 100% auto;     font-kerning: normal;     letter-spacing: .2rem;     font: bold 10px/18px verdana, lucida, sans-serif;     background: url(https://mars.nasa.gov/mars2020-raw-images/pub/ods/surface/sol/01429/ids/edr/browse/ncam/NRF_1429_0793807327_534ECM_N0691054NCAM03429_10_195J01_1200.jpg);   }
  .box>* {
    display: block;
    text-decoration: none;
    transition: all .2s ease-in-out;
    border: 1px solid #c9ff23;
    padding: 3px;
    border-radius: 2px;
    margin:5px;
    background-color: #3DF28B20;
    transition: all .2s ease-in-out;
    flex-shrink:1;
    flex-grow:1;
 
    
          &:hover {
        flex-grow: 3;
        
      }
    }
  
  .box a:link {
    
    color: white;
    
  }

  .box a:hover {
    transform: scale(1.3);
  }
 @blackgirlscode @normani relaese me you ppol gross @whitehouse i want separation from all things atlanta they are disgusting

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -3,8 +3,7 @@
 @import "rouge-base16-dark";
 @import url("https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap");
 
-
-
+  
 html {
 
   background-size: 100%;
@@ -83,7 +82,8 @@ section {
   flex-wrap: wrap;
   border-radius: 31px 31px 31px 31px;
   margin-top: 0px;
-width: 85vh; 
+width: 85vw; 
+  height: 50vh
 padding: 0px;
   margin-bottom: 40px;
   margin-right: auto;
@@ -118,42 +118,8 @@ section img {
   }
 
 
-svg { width:100%;}
-.jumpmenu {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; background-color: #0dd9c4; color: #3df28b; border: #3df28b; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; font-weight: bold
-  ;}
- 
-  
-  .postLoop {
-    border: 1px solid #c9ff23;
-    padding:4px;
-    margin: 4px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
-      background: url(https://www.nasa.gov/wp-content/uploads/2018/10/parachute-16.gif);
-    background-size: cover;
-    background-attachment: fixed;
-  
-  }
-  .postLoop > * {
-    border: 1px solid #c9ff23;
-    border-radius: 1px;
-    padding:5px;
-    background-color: rgb(96 139 168 / 0.2);
-    flex: 1 1 250px;
-  }
-   .postLoop h3 span {
-      display: inline-block;
-      color: white;
-      letter-spacing: -1px;
-      background: rgb(0, 0, 0); /* fallback color */
-      background: rgba(0, 0, 0, 0.7);
-      padding: 10px;
-    }
-  
-  
   .box {
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-wrap: wrap;
     background-attachment: fixed;
@@ -164,7 +130,7 @@ svg { width:100%;}
     font: bold 10px/18px verdana, lucida, sans-serif;
     background: url(https://mars.nasa.gov/mars2020-raw-images/pub/ods/surface/sol/01429/ids/edr/browse/ncam/NRF_1429_0793807327_534ECM_N0691054NCAM03429_10_195J01_1200.jpg);
   }
-  
+
   .box>* {
     display: block;
     text-decoration: none;
@@ -177,7 +143,7 @@ svg { width:100%;}
     transition: all .2s ease-in-out;
     flex-shrink:1;
     flex-grow:1;
-  
+ 
     
           &:hover {
         flex-grow: 3;
@@ -190,13 +156,16 @@ svg { width:100%;}
     color: white;
     
   }
-  
+
   .box a:hover {
     transform: scale(1.3);
   }
-  
-  
 
+  
+svg { width:100%;}
+.jumpmenu {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; background-color: #0dd9c4; color: #3df28b; border: #3df28b; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; font-weight: bold
+  ;}
+  
 p {
 margin-top:10px;
 margin-bottom:10px;
